# TSP_GA

./: .gitignore  CMakeLists.txt  D_AGA.m  PMX.cpp  TSP_GA  TSP_GA.ipynb  TSP_GA_CUDA.ipynb  ga_gpu.cu  readme.md  test.cpp  test.cu  test.py  test_vector.cpp
TSPlib/: bestleader.txt
res/: bestleader.txt
src/: TSP_GA.cu  TSP_GA.cuh  TSP_GA.ipynb  TSP_test.py  ga_gpu.cu  main.cpp  main_gpu.cu  utils.cuh  utils.h  world.cpp  world.h
